First version up and running.

--- a/.env-template
+++ b/.env-template
@@ -1,8 +1,11 @@
+POSTGRES_HOST=172.17.0.1
 POSTGRES_ROOT_USER=root
 POSTGRES_ROOT_PASSWORD=1234
 POSTGRES_PORT=5432
 POSTGRES_DATABASE_NAME=nieuwewarmtenu
 
+RABBITMQ_HOST=172.17.0.1
+RABBITMQ_PORT=5672
 RABBITMQ_ROOT_USER=root
 RABBITMQ_ROOT_PASSWORD=5678
 RABBITMQ_HIPE_COMPILE=1
