--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@
 greenlet==2.0.2
     # via sqlalchemy
 pika==1.3.2
-    # via nwnsdk (compute-engine-sdk-python/pyproject.toml)
+    # via
+    #   nwn-optimizer-worker (./pyproject.toml)
+    #   nwnsdk (compute-engine-sdk-python/pyproject.toml)
 pika-stubs==0.1.3
     # via nwnsdk (compute-engine-sdk-python/pyproject.toml)
 psycopg2-binary==2.9.7
