3: Use nwnsdk as a pypi dependency instead of as a submodule and use rtc-tools-heat-network as a pypi dependency instead of a manually generated file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 
 dependencies = [
-    "python-dotenv == 1.0.0",
+    "python-dotenv ~= 1.0.0",
     "pika",
-    #"nwnsdk ~= 0.0.1"
+    "nwnsdk == 0.0.6.post1",
+    "rtc-tools-heat-network ~= 0.2.0"
 ]
 
 [project.urls]
