--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.10"
 dependencies = [
     "python-dotenv ~= 1.0.0",
     "pika",
-    "nwnsdk == 0.0.6.post1",
+    "nwnsdk == 0.0.7",
     "rtc-tools-heat-network ~= 0.2.0"
 ]
 
