--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ numpy==1.22.4
     #   pymoca
     #   rtc-tools
     #   scipy
-nwnsdk==0.0.6.post1
+nwnsdk==0.0.7
     # via nwn-optimizer-worker (./pyproject.toml)
 ordered-set==4.1.0
     # via pyecore
