--- a/.env-template
+++ b/.env-template
@@ -11,8 +11,7 @@ RABBITMQ_ROOT_PASSWORD=5678
 RABBITMQ_HIPE_COMPILE=1
 RABBITMQ_EXCHANGE=nwn
 
-INFLUXDB_HOST=
-INFLUXDB_PORT=
-INFLUXDB_DB=
-INFLUXDB_USERNAME=
-INFLUXDB_PASSWORD=
+INFLUXDB_HOST=172.17.0.1
+INFLUXDB_PORT=8086
+INFLUXDB_USERNAME=root
+INFLUXDB_PASSWORD=9012
