--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,31 @@
 version: "3.8"
 
 services:
+    rabbitmq:
+        image: bitnami/rabbitmq:3.8.27
+        ports:
+            - "15672:15672"
+            - "5673:5672"
+        healthcheck:
+            test: [ "CMD", "curl", "-f", "http://localhost:15672" ]
+            interval: 10s
+            timeout: 10s
+            retries: 5
+
     optimization_worker:
         build:
             context: .
         env_file: .env
         deploy:
-            replicas: 2
+            replicas: 1
+        depends_on:
+            rabbitmq:
+                condition: service_healthy
+
+    local-test:
+        build:
+            context: ./local_test
+            dockerfile: Dockerfile
+        depends_on:
+            optimization_worker:
+                condition: service_started
