--- a/.env-template
+++ b/.env-template
@@ -5,3 +5,19 @@ INFLUXDB_WRITE_USER=write1
 INFLUXDB_WRITE_USER_PASSWORD=write9012
 INFLUXDB_PORT=8086
 INFLUXDB_RPC_PORT=8088
+
+RABBITMQ_USERNAME=celery
+RABBITMQ_PASSWORD=somepass2
+RABBITMQ_HOSTNAME=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_VIRTUALHOST=omotes_celery
+
+POSTGRESQL_USERNAME=celery
+POSTGRESQL_PASSWORD=somepass3
+POSTGRESQL_HOSTNAME=localhost
+POSTGRESQL_PORT=5432
+POSTGRESQL_DATABASE=omotes_celery
+
+# May be grow_optimizer or grow_simulator
+WORKER_WORKFLOW_TYPE=grow_optimizer
+LOG_LEVEL=INFO
