--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 
 dependencies = [
-    "celery ~= 5.3.6",
+    "celery[sqlalchemy] ~= 5.3.6",
+    "psycopg2 ~= 2.9.9",
     "jsonpickle ~= 3.0.2",
     "python-dotenv ~= 1.0.0",
     "rtc-tools-heat-network ~= 0.4.5"
