--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "psycopg2 ~= 2.9.9",
     "jsonpickle ~= 3.0.2",
     "python-dotenv ~= 1.0.0",
-    "rtc-tools-heat-network ~= 0.4.5"
+    "rtc-tools-heat-network ~= 0.4.5",
+    "omotes-job-tools ~= 0.0.1"
 ]
 
 [project.urls]
