--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "omotes-grow-worker"
-version = "0.0.1"
-authors = [{ name = "Sebastiaan la Fleur (TNO)", email = "sebastiaan.lafleur@tno.nl" }]
+dynamic = ["version"]
+authors = [
+    { name = "Sebastiaan la Fleur", email = "sebastiaan.lafleur@tno.nl" },
+    { name = "Mark Vrijlandt", email = "mark.vrijlandt@tno.nl" },
+]
 description = "Nieuwe Warmte Nu - Optimizer Worker"
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -28,6 +31,77 @@ dependencies = [
     "omotes-job-tools ~= 0.0.1"
 ]
 
+[project.optional-dependencies]
+dev = [
+    "setuptools ~= 69.0.3",
+    "setuptools-git-versioning < 2",
+    "pip-tools ~= 7.3.0",
+    "black ~= 22.1.0",
+    "flake8 ~= 6.1.0",
+    "Flake8-pyproject ~= 1.2.3",
+    "flake8-docstrings ~= 1.7.0",
+    "flake8-quotes ~= 3.3.2",
+    "pytest ~=7.3.1",
+    "pytest-cov ~=4.0.0",
+    "bump2version==1.0.1",
+    "mypy ~= 1.5.1",
+    "isort==5.13.2",
+    "build ~= 1.0.3",
+]
+
+
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+homepage = "https://www.nwn.nu"
+documentation = "https://readthedocs.org"
+repository = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker"
+changelog = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker/blob/main/CHANGELOG.md"
+
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = [
+    "setuptools ~= 69.0.3",
+    "wheel ~= 0.40.0",
+    "setuptools-git-versioning<2",
+]
+
+[tool.setuptools-git-versioning]
+enabled = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=grow_worker --cov-report html --cov-report term-missing --cov-fail-under 95"
+
+[tool.coverage.run]
+source = ["src"]
+
+[tool.flake8]
+exclude = ['.venv/*', 'venv/*', 'doc/*']
+ignore = [
+    'Q000', # Remove bad quotes
+    'D401', # Docstring First line should be imperative
+    'E203', # Space before colon (not PEP-8 compliant, and conflicts with black)
+    'C408', # Suggestion to use dict() over {}
+    'W503', # Starting lines with operators.
+]
+per-file-ignores = ['__init__.py:F401', 'test_main.py:D100,D101,D102,D103']
+max-line-length = 100
+count = true
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+exclude = ['.venv/*', 'venv/*', 'doc/*', 'ci/*']
+
+# mypy per-module options:
+[[tool.mypy.overrides]]
+module = "unit_test.*"
+check_untyped_defs = true
+ignore_missing_imports = true
