33: Upgrade to sdk 0.0.5.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ casadi==3.6.3
     # via
     #   rtc-tools
     #   rtc-tools-heat-network
-celery[sqlalchemy]==5.3.6
+celery==5.3.6
     # via omotes-sdk-python
 certifi==2023.7.22
     # via requests
@@ -40,20 +40,14 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.3.0
     # via celery
-colorama==0.4.6
-    # via click
 future-fstrings==1.2.0
     # via pyecore
-greenlet==3.0.3
-    # via sqlalchemy
 idna==3.4
     # via
     #   requests
     #   yarl
 influxdb==5.3.1
     # via rtc-tools-heat-network
-jsonpickle==3.0.2
-    # via omotes-sdk-python
 kombu==5.3.4
     # via celery
 lxml==4.9.3
@@ -69,9 +63,9 @@ numpy==1.22.4
     #   pymoca
     #   rtc-tools
     #   scipy
-omotes-sdk-protocol==0.0.3
+omotes-sdk-protocol==0.0.4
     # via omotes-sdk-python
-omotes-sdk-python==0.0.3
+omotes-sdk-python==0.0.5
     # via omotes-grow-worker (pyproject.toml)
 ordered-set==4.1.0
     # via pyecore
@@ -83,8 +77,6 @@ prompt-toolkit==3.0.41
     # via click-repl
 protobuf==4.25.2
     # via omotes-sdk-protocol
-psycopg2==2.9.9
-    # via omotes-sdk-python
 pyecore==0.12.1
     # via
     #   pyesdl
@@ -123,12 +115,8 @@ six==1.16.0
     # via
     #   influxdb
     #   python-dateutil
-sqlalchemy==2.0.25
-    # via celery
 typing-extensions==4.9.0
-    # via
-    #   kombu
-    #   sqlalchemy
+    # via kombu
 tzdata==2023.3
     # via
     #   backports-zoneinfo
