--- a/.env-template
+++ b/.env-template
@@ -1,10 +1,7 @@
-INFLUXDB_ADMIN_USER=root
-INFLUXDB_HOST=omotes_influxdb
-INFLUXDB_ADMIN_PASSWORD=9012
-INFLUXDB_WRITE_USER=write1
-INFLUXDB_WRITE_USER_PASSWORD=write9012
+INFLUXDB_USERNAME=root
+INFLUXDB_PASSWORD=9012
+INFLUXDB_HOSTNAME=omotes_influxdb
 INFLUXDB_PORT=8086
-INFLUXDB_RPC_PORT=8088
 
 RABBITMQ_USERNAME=celery
 RABBITMQ_PASSWORD=somepass2
@@ -21,3 +18,6 @@ POSTGRESQL_DATABASE=omotes_celery
 # May be grow_optimizer or grow_simulator
 GROW_TASK_TYPE=grow_optimizer
 LOG_LEVEL=INFO
+
+TASK_RESULT_QUEUE_NAME=omotes_task_result_events
+TASK_PROGRESS_QUEUE_NAME=omotes_task_progress_events
