34: Add new Grow workflows.

--- a/.env-template
+++ b/.env-template
@@ -15,7 +15,7 @@ POSTGRESQL_HOSTNAME=localhost
 POSTGRESQL_PORT=5432
 POSTGRESQL_DATABASE=omotes_celery
 
-# May be grow_optimizer or grow_simulator
+# May be grow_optimizer, grow_simulator, grow_optimizer_no_heat_losses, grow_optimizer_no_heat_losses_discounted_capex
 GROW_TASK_TYPE=grow_optimizer
 LOG_LEVEL=INFO
 
