49: Updated mesido to 0.1.3.

--- a/.env-template
+++ b/.env-template
@@ -15,8 +15,8 @@ POSTGRESQL_HOSTNAME=localhost
 POSTGRESQL_PORT=5432
 POSTGRESQL_DATABASE=omotes_celery
 
-# May be grow_optimizer, grow_simulator, grow_optimizer_no_heat_losses, grow_optimizer_no_heat_losses_discounted_capex
-GROW_TASK_TYPE=grow_optimizer
+# May be grow_optimizer_default, grow_optimizer_no_heat_losses, grow_optimizer_with_pressure or grow_simulator
+GROW_TASK_TYPE=grow_optimizer_default
 LOG_LEVEL=INFO
 
 TASK_RESULT_QUEUE_NAME=omotes_task_result_events
