--- a/requirements.txt
+++ b/requirements.txt
@@ -67,9 +67,9 @@ numpy==1.22.4
     #   pymoca
     #   rtc-tools
     #   scipy
-omotes-sdk-protocol==0.1.5
+omotes-sdk-protocol==0.1.6
     # via omotes-sdk-python
-omotes-sdk-python==3.1.2
+omotes-sdk-python==3.2.2
     # via omotes-grow-worker (pyproject.toml)
 ordered-set==4.1.0
     # via pyecore
@@ -88,7 +88,9 @@ pyecore==0.12.1
     #   mesido
     #   pyesdl
 pyesdl==24.2
-    # via mesido
+    # via
+    #   mesido
+    #   omotes-sdk-python
 pymoca==0.9.0
     # via
     #   mesido
