--- a/requirements.txt
+++ b/requirements.txt
@@ -10,21 +10,21 @@ aiormq==6.8.1
     # via aio-pika
 amqp==5.3.1
     # via kombu
-antlr4-python3-runtime==4.7.2
+antlr4-python3-runtime==4.13.2
     # via pymoca
 billiard==4.2.1
     # via celery
-casadi==3.6.3
+casadi-gil-comp==3.6.7
     # via
     #   mesido
-    #   rtc-tools
+    #   rtc-tools-gil-comp
 celery==5.3.6
     # via omotes-sdk-python
-certifi==2024.12.14
+certifi==2025.1.31
     # via requests
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
     # via requests
-click==8.1.7
+click==8.1.8
     # via
     #   celery
     #   click-didyoumean
@@ -38,6 +38,8 @@ click-repl==0.3.0
     # via celery
 coolprop==6.6.0
     # via mesido
+defusedxml==0.7.1
+    # via rtc-tools-gil-comp
 future-fstrings==1.2.0
     # via pyecore
 idna==3.10
@@ -48,22 +50,22 @@ influxdb==5.3.2
     # via mesido
 kombu==5.4.2
     # via celery
-lxml==5.3.0
+lxml==5.3.1
     # via pyecore
-mesido==0.1.8.4
+mesido==0.1.8.5
     # via omotes-grow-worker (pyproject.toml)
 msgpack==1.1.0
     # via influxdb
 multidict==6.1.0
     # via yarl
-numpy==1.22.4
+numpy==1.25.2
     # via
-    #   casadi
+    #   casadi-gil-comp
     #   pandas
     #   pymoca
-    #   rtc-tools
+    #   rtc-tools-gil-comp
     #   scipy
-omotes-sdk-protocol==0.1.13
+omotes-sdk-protocol==0.1.14
     # via omotes-sdk-python
 omotes-sdk-python==3.2.5
     # via omotes-grow-worker (pyproject.toml)
@@ -75,11 +77,11 @@ pamqp==3.3.0
     #   omotes-sdk-python
 pandas==1.5.3
     # via mesido
-prompt-toolkit==3.0.48
+prompt-toolkit==3.0.50
     # via click-repl
 propcache==0.2.1
     # via yarl
-protobuf==4.25.5
+protobuf==5.29.3
     # via omotes-sdk-protocol
 pyecore==0.12.1
     # via
@@ -89,11 +91,11 @@ pyesdl==24.2
     # via
     #   mesido
     #   omotes-sdk-python
-pymoca==0.9.1
+pymoca==0.9.2
     # via
     #   mesido
-    #   rtc-tools
     #   rtc-tools-channel-flow
+    #   rtc-tools-gil-comp
 python-dateutil==2.9.0.post0
     # via
     #   celery
@@ -101,20 +103,20 @@ python-dateutil==2.9.0.post0
     #   pandas
 python-dotenv==1.0.1
     # via omotes-grow-worker (pyproject.toml)
-pytz==2024.2
+pytz==2025.1
     # via
     #   influxdb
     #   pandas
 requests==2.32.3
     # via influxdb
-restrictedpython==7.4
+restrictedpython==8.0
     # via pyecore
-rtc-tools==2.6.0a3
-    # via mesido
 rtc-tools-channel-flow==1.2.0
-    # via rtc-tools
+    # via rtc-tools-gil-comp
+rtc-tools-gil-comp==2.6.1
+    # via mesido
 scipy==1.10.1
-    # via rtc-tools
+    # via rtc-tools-gil-comp
 six==1.17.0
     # via
     #   influxdb
@@ -127,11 +129,11 @@ typing-extensions==4.11.0
     # via
     #   multidict
     #   omotes-sdk-python
-tzdata==2024.2
+tzdata==2025.1
     # via
     #   celery
     #   kombu
-urllib3==2.2.3
+urllib3==2.3.0
     # via requests
 vine==5.1.0
     # via
