--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ casadi-gil-comp==3.6.7
     # via
     #   mesido
     #   rtc-tools-gil-comp
-celery==5.3.6
+celery==5.5.1
     # via omotes-sdk-python
 certifi==2025.1.31
     # via requests
@@ -48,15 +48,15 @@ idna==3.10
     #   yarl
 influxdb==5.3.2
     # via mesido
-kombu==5.4.2
+kombu==5.5.2
     # via celery
-lxml==5.3.1
+lxml==5.3.2
     # via pyecore
 mesido==0.1.8.5
     # via omotes-grow-worker (pyproject.toml)
 msgpack==1.1.0
     # via influxdb
-multidict==6.1.0
+multidict==6.4.3
     # via yarl
 numpy==1.25.2
     # via
@@ -65,9 +65,9 @@ numpy==1.25.2
     #   pymoca
     #   rtc-tools-gil-comp
     #   scipy
-omotes-sdk-protocol==0.1.14
+omotes-sdk-protocol==1.1.0
     # via omotes-sdk-python
-omotes-sdk-python==3.2.5
+omotes-sdk-python==4.1.0
     # via omotes-grow-worker (pyproject.toml)
 ordered-set==4.1.0
     # via pyecore
@@ -79,9 +79,9 @@ pandas==1.5.3
     # via mesido
 prompt-toolkit==3.0.50
     # via click-repl
-propcache==0.2.1
+propcache==0.3.1
     # via yarl
-protobuf==5.29.3
+protobuf==5.29.4
     # via omotes-sdk-protocol
 pyecore==0.12.1
     # via
@@ -103,13 +103,13 @@ python-dateutil==2.9.0.post0
     #   pandas
 python-dotenv==1.0.1
     # via omotes-grow-worker (pyproject.toml)
-pytz==2025.1
+pytz==2025.2
     # via
     #   influxdb
     #   pandas
 requests==2.32.3
     # via influxdb
-restrictedpython==8.0
+restrictedpython==8.1a1.dev0
     # via pyecore
 rtc-tools-channel-flow==1.2.0
     # via rtc-tools-gil-comp
@@ -125,15 +125,13 @@ streamcapture==1.2.5
     # via omotes-sdk-python
 strenum==0.4.15
     # via mesido
-typing-extensions==4.11.0
+typing-extensions==4.13.2
     # via
     #   multidict
     #   omotes-sdk-python
-tzdata==2025.1
-    # via
-    #   celery
-    #   kombu
-urllib3==2.3.0
+tzdata==2025.2
+    # via kombu
+urllib3==2.4.0
     # via requests
 vine==5.1.0
     # via
@@ -142,7 +140,7 @@ vine==5.1.0
     #   kombu
 wcwidth==0.2.13
     # via prompt-toolkit
-yarl==1.18.3
+yarl==1.19.0
     # via
     #   aio-pika
     #   aiormq
