--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ casadi-gil-comp==3.6.7
     # via
     #   mesido
     #   rtc-tools-gil-comp
-celery==5.5.2
+celery==5.5.3
     # via omotes-sdk-python
 certifi==2025.4.26
     # via requests
@@ -48,13 +48,13 @@ idna==3.10
     #   yarl
 influxdb==5.3.2
     # via mesido
-kombu==5.5.3
+kombu==5.5.4
     # via celery
 lxml==5.4.0
     # via pyecore
-mesido==0.1.11
+mesido==0.1.12
     # via omotes-grow-worker (pyproject.toml)
-msgpack==1.1.0
+msgpack==1.1.1
     # via influxdb
 multidict==6.4.4
     # via yarl
@@ -71,6 +71,8 @@ omotes-sdk-python==4.2.1
     # via omotes-grow-worker (pyproject.toml)
 ordered-set==4.1.0
     # via pyecore
+packaging==25.0
+    # via kombu
 pamqp==3.3.0
     # via
     #   aiormq
@@ -79,9 +81,9 @@ pandas==1.5.3
     # via mesido
 prompt-toolkit==3.0.51
     # via click-repl
-propcache==0.3.1
+propcache==0.3.2
     # via yarl
-protobuf==5.29.4
+protobuf==5.29.5
     # via omotes-sdk-protocol
 pyecore==0.13.2
     # via
@@ -107,7 +109,7 @@ pytz==2025.2
     # via
     #   influxdb
     #   pandas
-requests==2.32.3
+requests==2.32.4
     # via influxdb
 restrictedpython==8.0
     # via pyecore
@@ -125,7 +127,7 @@ streamcapture==1.2.5
     # via omotes-sdk-python
 strenum==0.4.15
     # via mesido
-typing-extensions==4.13.2
+typing-extensions==4.14.0
     # via
     #   multidict
     #   omotes-sdk-python
@@ -140,7 +142,7 @@ vine==5.1.0
     #   kombu
 wcwidth==0.2.13
     # via prompt-toolkit
-yarl==1.20.0
+yarl==1.20.1
     # via
     #   aio-pika
     #   aiormq
